--- a/domains/kitchen/web/templates/kitchen.html
+++ b/domains/kitchen/web/templates/kitchen.html
@@ -1,7 +1,7 @@
 {{ define "title" }} KITCHEN {{ end }}
 
 {{ define "content" }}
-<div class="hello">
+<div class="hello-from-kitchen">
     <p>hello from kitchen</p>
 </div>
 {{ end }}
