--- a/domains/shop/web/templates/shop.html
+++ b/domains/shop/web/templates/shop.html
@@ -1,7 +1,7 @@
 {{ define "title" }} SHOP {{ end }}
 
 {{ define "content" }}
-<div class="hello">
+<div class="hello-from-shop">
     <p>hello from shop</p>
 </div>
 {{ end }}
