--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,34 +1,47 @@
+{{ $domains := domainsInit }}
 <!doctype html>
-<html lang='en'>
-    <head>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>{{ template "title" . }}Домашняя страница - Snippetbox</title>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>{{ template "title" . }}Привет CMS!</title>
 
-        <link rel="stylesheet" type='text/css' media='screen' href="./web/static/style.css" />
-        <link rel="stylesheet" type='text/css' media='screen' href="./domains/shop/web/static/shop.css">
-        <link rel="stylesheet" type='text/css' media='screen' href="./domains/kitchen/web/static/kitchen.css">
-        
-    </head>
-    <body>
-        <header>
-            <h1><a href='/'>Snippetbox</a></h1>
-        </header>
-        <nav>
-            <a href="/">Домашняя страница</a>
-        </nav>
-        <main>
-            <h2>{{ .Title }}</h2>   
-            <p>{{ .Message }}</p>
-            <p> ---------------- </p>
-            {{ template "content" . }}
-        </main>
-        <div class="bla">
-            <p>blablabla</p>
+
+    <!-- Bootstrap CSS -->
+    <link href="/web/static/bootstrap.min.css" rel="stylesheet">
+    <link href="/web/static/style.css" rel="stylesheet">
+    <link href="/domains/shop/web/static/shop.css" rel="stylesheet">
+    {{range $domains.CSSFiles}}
+    <link href="{{.}}" rel="stylesheet">
+    {{end}}
+  
+    
+    <script src="/web/static/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="/web/static/sidebars.js" type="text/javascript"></script>
+    {{range $domains.JSFiles}}
+    <script src="{{.}}" type="text/javascript"></script>
+    {{end}}
+
+  </head>
+  <body>
+    <h1>Привет CMS!</h1>
+   
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 sidebar flex-shrink-0 p-3 border" > <!-- side bar -->
+                <p class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
+                    <span class="fs-5 fw-semibold">Domains</span>
+                </p>
+                {{ template "sidebar" . }}
+            </div>
+            <!-- !!! -->
+            <div class="col-md-9 main">{{ template "content" . }}</div>
         </div>
-        
-    </body>
+    </div>
 
+  </body>
 </html>
+
+
 
