--- a/web/templates/hello.html
+++ b/web/templates/hello.html
@@ -1,7 +1,7 @@
 {{ define "title" }} HELLO! {{ end }}
 
 {{ define "content" }}
-<div class="qwe">
+<div class="hello">
     <p> hello </p>
 </div>
 {{ end }}
